# privacy-filter-fintech

./: .gitignore  LICENSE  README.md  privacy-filter-fintech-exp-plan.md  pyproject.toml
.claude/hf-hub-publish/: SKILL.md
.claude/opf-fine-tuning/: SKILL.md
.claude/pii-data-skill/: SKILL.md
configs/: data_config.yaml  eval_config.yaml  train_config.yaml
docs/: data_provenance.md  label_taxonomy.md  learnings.md  training_recipe.md
notebooks/: 02_train_colab.ipynb  03_eval_colab.ipynb
scripts/: launch_training.sh  prepare_data.sh  run_evaluation.sh
src/data/: build_dataset.py  export_opf.py  harmonize.py  load_gretel.py  load_nemotron.py  synthetic.py
src/eval/: compare.py  metrics.py  run_eval.py
src/train/: train.py
